--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,5 +17,5 @@
 
 <resources>
 
-    <style name="Theme.Places" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Gladys" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
