--- a/automotive/src/main/res/values/themes.xml
+++ b/automotive/src/main/res/values/themes.xml
@@ -16,5 +16,5 @@
 
 <resources>
 
-    <style name="Theme.Places" parent="android:Theme.Material.Light.DarkActionBar" />
+    <style name="Theme.Gladys" parent="android:Theme.Material.Light.DarkActionBar" />
 </resources>
